@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/aoi
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/aoi/ChangeLog,v 1.18 2007/03/27 06:09:15 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/aoi/ChangeLog,v 1.19 2007/04/30 21:00:36 genone Exp $
+
+  30 Apr 2007; Marius Mauch <genone@gentoo.org> aoi-1.4.ebuild:
+  Replacing einfo with elog
 
   27 Mar 2007; Christian Faulhammer <opfer@gentoo.org> aoi-2.2.1.ebuild:
   stable x86, bug 156354
