@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/album
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/album/ChangeLog,v 1.29 2007/04/16 07:33:10 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/album/ChangeLog,v 1.30 2007/04/30 20:57:54 genone Exp $
+
+  30 Apr 2007; Marius Mauch <genone@gentoo.org> album-3.10.ebuild,
+  album-3.13.ebuild, album-4.02.ebuild:
+  Replacing einfo with elog
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> album-4.02.ebuild:
   Stable on ppc64
